@@ -1,3 +1,14 @@
+2013-09-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c,
+	  src/port.h,
+	  src/z80/main.c,
+	  src/z80/peep.c,
+	  src/z80/z80.h,
+	  src/z80/gen.c,
+	  src/z80/peep.c:
+	  Preparations for TLCS-90 port.
+
 2013-09-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/addrspace.c:
